[package]
name = "eisenmatrix"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"


[alias]
build = "clippy"

[dependencies]
serial_test = "3.2.0"
axum = "0.8.4"
tokio = { version = "1.46.0", features = ["rt-multi-thread", "macros"] }
askama = "0.14.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
